--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
     "bull": "^4.10.4",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "exceljs": "^4.3.0",
     "express": "^4.18.2",
     "express-paginate": "^1.0.2",
+    "jsonwebtoken": "^9.0.0",
     "jszip": "^3.10.1",
     "mongoose": "^7.1.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.2",
+    "path": "^0.12.7",
     "qrcode": "^1.5.3",
     "redis": "^4.6.6",
     "shortid": "^2.2.16",
